<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BasicUIDesign</string>
    <string name="displayCount">Your Count is :</string>
    <string name="action_settings">Settings</string>
    <string name="Name">Name</string>
    <string name="LastName">LastName</string>
    <string name="Email">Email</string>
    <string name="MobileNumber">Number</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Subscribe">Subscribe</string>
    <string name="Submit">Submit</string>

    <string-array name="category">
        <item>General</item>
        <item>OBC</item>
        <item>SC</item>
        <item>ST</item>
    </string-array>
</resources>
